<resources>
    <string name="app_name">g42 Dilemma</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="login">Log Ind</string>
    <string name="password">Kode</string>
    <string name="username">Brugernavn</string>
    <string name="wusername">Ønsket Brugernavn</string>
    <string name="wpassword">Ønsket Kodeord</string>
    <string name="repassword">Gentag Kodeord</string>
    <string name="currentPW">Nuværende Kodeord</string>
    <string name="newPW">Nye Kodeord</string>
    <string name="renewPW">Gentag nye Kodeord</string>
    <string name="changePW">Skift kode</string>
    <string name="specificUN">Brugernavn</string>
    <string name="specificButton">Færdig</string>
    <string name="reg_username_text">Ønsket E-mail</string>
    <string name="text_logout">Log ud</string>


</resources>
